--- a/acceuil.html
+++ b/acceuil.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <link rel="stylesheet" href="./css/covoit.css">
-    <link rel="stylesheet" href="./css/bandeaux.css">
+    <link rel="stylesheet" href="css/acceuil.css">
+    <link rel="stylesheet" href="./css/menu.css">
 	<meta charset="UTF-8">
 </head>
-<header id="bandeau_apps">
-</header>
+<header id="menu">
 <body>
 
+    <a id="logo"><img src="img/menuImg-removebg-preview.png"></a>
 
 
-    
 </body>
 </html>
