--- a/acceuil.html
+++ b/acceuil.html
@@ -8,8 +8,7 @@
 <header id="menu">
 <body>
 
-    <a id="logo"><img src="img/menuImg-removebg-preview.png"></a>
-
-
+    <a id="logo"><img src="img/menuImg-removebg-preview.png"></a>*
+    <h1>acceuil</h1>
 </body>
 </html>
