--- a/acceuil.html
+++ b/acceuil.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <link rel="stylesheet" href="css/acceuil.css">
+    <link rel="stylesheet" href="./.css">
     <link rel="stylesheet" href="./css/menu.css">
 	<meta charset="UTF-8">
 </head>
 <header id="menu">
+</header>
 <body>
 
     <a id="logo"><img src="img/menuImg-removebg-preview.png"></a>
