--- a/acceuil.html
+++ b/acceuil.html
@@ -3,13 +3,15 @@
 <head>
     <link rel="stylesheet" href="./.css">
     <link rel="stylesheet" href="./css/menu.css">
-	<meta charset="UTF-8">
+	<script src="js/quiz.js"></script>
+    <meta charset="UTF-8">
 </head>
 
 <header id="menu">
 
     <img src="img/menuImg-removebg-preview.png">
     <h1>acceuil</h1>
+
 </header>
 <body>
 </body>
