--- a/acceuil.html
+++ b/acceuil.html
@@ -1,18 +1,44 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <link rel="stylesheet" href="./.css">
-    <link rel="stylesheet" href="./css/menu.css">
-	<script src="js/quiz.js"></script>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Accueil</title>
+    <link rel="stylesheet" href="./css/acceuil.css">
+    <link rel="stylesheet" href="./css/menu.css">
 </head>
-
-<header id="menu">
-
-    <img src="img/menuImg-removebg-preview.png">
-    <h1>acceuil</h1>
-
-</header>
 <body>
+    <header id="site-header">
+        <img src="img/menuImg-removebg-preview.png" alt="Logo">
+        <h1>acceuil</h1>
+    </header>
+
+    <!-- Bouton d'ouverture du menu (fixé à droite) -->
+    <button id="menuToggle" class="menu-toggle" aria-controls="sideMenu" aria-expanded="false" aria-label="Ouvrir le menu">
+        <span class="hamburger"></span>
+    </button>
+
+    <!-- Menu latéral droit -->
+    <aside id="sideMenu" class="side-menu" aria-hidden="true">
+        <button id="menuClose" class="menu-close" aria-label="Fermer le menu">×</button>
+        <nav class="menu-nav" aria-label="Navigation principale">
+            <ul>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">À propos</a></li>
+                <li><a href="#">Événements</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </aside>
+
+    <!-- Overlay (fond sombre) -->
+    <div id="overlay" class="menu-overlay" hidden></div>
+
+    <main>
+        <!-- Contenu principal (à adapter) -->
+        <p>Contenu de la page...</p>
+    </main>
+
+    <script src="./js/menu.js"></script>
 </body>
 </html>
