--- a/acceuil.html
+++ b/acceuil.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Accueil</title>
-    <link rel="stylesheet" href="./css/acceuil.css">
-    <link rel="stylesheet" href="./css/menu.css">
-</head>
-<body>
-
-    <header>
-        <p>hello</p>
-    </header>
-
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <title>Accueil</title>
+        <link rel="stylesheet" href="./css/acceuil.css">
+        <link rel="stylesheet" href="./css/menu.css">
+    </head>
+    <body>
+        <header>
+            <img src="img/menuImg-removebg-preview.png"> 
+        </header>
+        <main>
+            <p>OPEN Source</p>
+        </main>
+    </body>
 </html>
