Modifications locales sur acceuil.html

--- a/acceuil.html
+++ b/acceuil.html
@@ -10,7 +10,12 @@
 <body>
 
     <header>
-        <p>hello</p>
+        <img src="img/" id="logo">
+
+        <div id="liens">
+            <a><p>menu</p></a>
+                <a href="quiz.html"> quiz</a>
+        </div>
     </header>
 
 </body>
