--- a/acceuil.html
+++ b/acceuil.html
@@ -1,40 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
-<<<<<<< HEAD
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Accueil</title>
-        <link rel="stylesheet" href="./css/acceuil.css">
-        <!-- <link rel="stylesheet" href="./css/menu.css"> -->
-    </head>
-    <body>
-        <header>
-            <img src="img/menuImg-removebg-preview.png"> 
-        </header>
-        <main>
-            <p>OPEN Source</p>
-        </main>
-    </body>
-=======
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Accueil</title>
     <link rel="stylesheet" href="./css/acceuil.css">
-    <link rel="stylesheet" href="./css/menu.css">
 </head>
 <body>
 
     <header>
-        <img src="img/" id="logo">
-
-        <div id="liens">
-            <a><p>menu</p></a>
-                <a href="quiz.html"> quiz</a>
-        </div>
+        <img src="img/menuImg-removebg-preview.png" id="logo">
     </header>
 
 </body>
->>>>>>> ebe6ae722432775548bfa45a9f501ccff931a0c4
 </html>
