--- a/acceuil.html
+++ b/acceuil.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="./css/acceuil.css">
 </head>
 <body>
-
     <header>
-        <img src="img/menuImg-removebg-preview.png" id="logo">
+        <a href="quiz.html"> Quiz</a>
+        <a href="jeu.html"> Jeu</a>
+        <a href="acceuil.html"> Accueil</a>
+        <a href="info.html"> Infos</a>
     </header>
 
 </body>
