--- a/info.html
+++ b/info.html
@@ -8,6 +8,7 @@
 <body>
     <main>
         <div>Work in progress</div>
+        <a href="acceuil.html"> Back to Black</a>
     </main>
 </body>
 </html>
