--- a/acceuil.html
+++ b/acceuil.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <header>
-        <a href="quiz.html"> Quiz</a>
-        <a href="jeu.html"> Jeu</a>
-        <a href="acceuil.html"> Accueil</a>
-        <a href="info.html"> Infos</a>
+        <div>
+            <a href="quiz.html"> Quiz</a>
+            <a href="jeu.html"> Jeu</a>
+            <a href="acceuil.html"> Accueil</a>
+            <a href="info.html"> Infos</a>
+        </div>  
     </header>
 
 </body>
