--- a/acceuil.html
+++ b/acceuil.html
@@ -15,6 +15,10 @@
             <a href="info.html"> Infos</a>
         </div>  
     </header>
+    <main>
+    </main>
+    <footer>
+    </footer>
 
 </body>
 </html>
