--- a/quiz.html
+++ b/quiz.html
@@ -2,6 +2,7 @@
 <html lang="fr">
     <link rel="stylesheet" href="css/quiz.css">
     <link rel="stylesheet" href="css/menu.css">
+    <!-- <script defer src="js/quiz.js"></script> -->
 <head>
 	<meta charset="UTF-8">
 
@@ -10,11 +11,24 @@
     <header>
 
     </header>
+<br><br><br><br>
 
     <h1>Quiz </h1>
+    <button class="launch">Lancer le quiz</button>
+
     <div id="questions">
-        
+        <p>question 1 : </p>
+        <p>reponse :</p>
+        <div id="reponses">
+        <div class="col1">
+            <p><input type="radio" name="1">A</p>
+            <p><input type="radio" name="1">B</p>
+        </div>
+        <div class="col2">
+            <p><input type="radio" name="1">C</p>
+            <p><input type="radio"  name="1">D</p>
+        </div>
+        </div>
     </div>
-    <p></p>
 </body>
 </html>
