--- a/quiz.html
+++ b/quiz.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="fr">
     <link rel="stylesheet" href="css/quiz.css">
-    <link rel="stylesheet" href="css/menu.css">
-    <!-- <script defer src="js/quiz.js"></script> -->
 <head>
 	<meta charset="UTF-8">
 
 </head>
 <body>
-    <header>
-
+     <header>
+        <div>
+            <a href="quiz.html"> Quiz</a>
+            <a href="jeu.html"> Jeu</a>
+            <a href="acceuil.html"> Accueil</a>
+            <a href="info.html"> Infos</a>
+        </div>
     </header>
-<br><br><br><br>
+    <main>
+    <br><br><br><br>
 
-    <h1>Quiz </h1>
-    <button class="launch">Lancer le quiz</button>
+        <h1>Quiz </h1>
+        <button class="launch">Lancer le quiz</button>
 
-    <div id="questions">
-        <p>question 1 : </p>
-        <p>reponse :</p>
-        <div id="reponses">
-        <div class="col1">
-            <p><input type="radio" name="1">A</p>
-            <p><input type="radio" name="1">B</p>
+        <div id="questions">
+            <p>question 1 : </p>
+            <p>reponse :</p>
+            <div id="reponses">
+                <div class="col1">
+                    <p><input type="radio" name="1">A</p>
+                    <p><input type="radio" name="1">B</p>
+                </div>
+                <div class="col2">
+                    <p><input type="radio" name="1">C</p>
+                    <p><input type="radio"  name="1">D</p>
+                </div>
+            </div>
         </div>
-        <div class="col2">
-            <p><input type="radio" name="1">C</p>
-            <p><input type="radio"  name="1">D</p>
-        </div>
-        </div>
-    </div>
+    </main>
 </body>
 </html>
