--- a/acceuil.html
+++ b/acceuil.html
@@ -9,10 +9,12 @@
 <body>
     <header>
         <div>
+            <a href="acceuil.html"><img src="img/ChatGPT_Image_4_dec._2025_19_32_32.png"></a>
             <a href="quiz.html"> Quiz</a>
             <a href="jeu.html"> Jeu</a>
             <a href="acceuil.html"> Accueil</a>
             <a href="info.html"> Infos</a>
+            <img src="img/menuImg-removebg-preview.png">
         </div>  
     </header>
     <main>
