--- a/acceuil.html
+++ b/acceuil.html
@@ -18,12 +18,14 @@
         </div>  
     </header>
     <main>
-        <h1>OPEN SOURCE</h1>
-        <img src="img/open-source-2.png">
-        <h2>c'est quoi ?</h2>
-        <p>l’Open Source veut désigné que c’est accessible a TOUS.</p>
-        <p>Généralement, cela concerne les logiciels, n'importe qui peut voir,</p>
-        <p>modifier et distribuer le code à sa convenance.</p>
+        <section>
+            <h1>OPEN SOURCE</h1>
+            <img src="img/open-source-2.png">
+            <h2>c'est quoi ?</h2>
+            <p>l’Open Source veut désigné que c’est accessible a TOUS.</p>
+            <p>Généralement, cela concerne les logiciels, n'importe qui peut voir,</p>
+            <p>modifier et distribuer le code à sa convenance.</p>
+        </section>
     </main>
     <footer>
     </footer>
