--- a/acceuil.html
+++ b/acceuil.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Accueil</title>
     <link rel="stylesheet" href="./css/acceuil.css">
+    <link rel="stylesheet" href="/css/menu.css">
 </head>
 <body>
     <header>
