--- a/jeu.html
+++ b/jeu.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="/css/menu.css">
     <title>jeu</title>
 </head>
 <body>
+    <header>
+        <div>
+            <a href="acceuil.html"><img src="img/ChatGPT_Image_4_dec._2025_19_32_32.png"></a>
+            <a href="quiz.html"> Quiz</a>
+            <a href="jeu.html"> Jeu</a>
+            <a href="acceuil.html"> Accueil</a>
+            <a href="info.html"> Infos</a>
+            <img src="img/menuImg-removebg-preview.png">
+        </div>  
+    </header>
     <main>
         <div>Work in progress</div>
         <a href="acceuil.html"> Back to Black</a>
