--- a/quiz.html
+++ b/quiz.html
@@ -5,16 +5,18 @@
     <script src="js/quiz.js" defer="defer"></script>
 <head>
 	<meta charset="UTF-8">
-
+    <link rel="stylesheet" href="/css/menu.css">
 </head>
 <body>
-     <header>
+    <header>
         <div>
+            <a href="acceuil.html"><img src="img/ChatGPT_Image_4_dec._2025_19_32_32.png"></a>
             <a href="quiz.html"> Quiz</a>
             <a href="jeu.html"> Jeu</a>
             <a href="acceuil.html"> Accueil</a>
             <a href="info.html"> Infos</a>
-        </div>
+            <img src="img/menuImg-removebg-preview.png">
+        </div>  
     </header>
     <main>
     <br><br><br><br>
