--- a/jeu.html
+++ b/jeu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="css/jeu.css">
     <title>jeu</title>
 </head>
 <body>
@@ -18,8 +19,16 @@
         </div>  
     </header>
     <main>
-        <div>Work in progress</div>
-        <a href="acceuil.html"> Back to Black</a>
+        <div>
+            <center>
+            <iframe class="jeu_open_source" src="https://jeu2048.fr/" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
+            </center>
+        </div>
+            <div>
+                <p>2048 est un jeu de réflexion solo très populaire lancé en 2014. </p>
+                <p>Il se joue sur une grille carrée de 4 x 4 cases dans laquelle apparaissent des tuiles numérotées (2, 4, 8, 16, etc.). </p>
+                <p>Le but du joueur est d'atteindre la tuile 2048 en combinant les nombres.</p>
+        </div>
     </main>
 </body>
 </html>
