--- a/quiz.html
+++ b/quiz.html
@@ -20,9 +20,14 @@
     </header>
     <main>
 
-    <br><br><br><br>
+    <br>
 
-        <h1>Quiz </h1>
+        
+        <div id="scoreBox">
+            <p id="PhraseDeScore">Votre score est de :</p>
+            <p id="score">0 point</p>
+            <p>/26</p>
+        </div>
         
         <div id="questions">
             <p id="q">question 1 : </p>
